Fix header items align

--- a/src/dashboard-react-web/src/components/App/Header.scss
+++ b/src/dashboard-react-web/src/components/App/Header.scss
@@ -3,16 +3,17 @@
 $-title-font-weight: 500;
 
 .header {
-    display: flex;
-    justify-content: space-between;
-    padding: layout-variables.$element-spacing-small var(--grid-layout-margin);
-    height: layout-variables.$header-height;
-    background-color: var(--global-surface-color);
-    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
-    z-index: 100;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 var(--grid-layout-margin);
+  height: layout-variables.$header-height;
+  background-color: var(--global-surface-color);
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
+  z-index: 100;
 }
 
 .header__title {
-    color: var(--global-primary-color);
-    font-weight: $-title-font-weight;
+  color: var(--global-primary-color);
+  font-weight: $-title-font-weight;
 }
